sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: type mismatch;
 found   : Double
 required: Int
      (ecart = ecart.toDouble /(1.3)).toInt;
                              ^AlgCombSort:8: error: value toInt is not a member of Unit
      (ecart = ecart.toDouble /(1.3)).toInt;
                                      ^AlgCombSort:10: error: not found: value i
    i=0;
    ^AlgCombSort:11: error: not found: value i
    while (i+ecart < getNombreValeurs()) {
           ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+1,i)) {
                    ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+1,i)) {
                        ^AlgCombSort:13: error: not found: value i
        echange(i,i+1);
                ^AlgCombSort:13: error: not found: value i
        echange(i,i+1);
                  ^AlgCombSort:16: error: not found: value i
      i=i+1;
      ^